Updates for Jakarta EE 10