@@ -6,6 +6,14 @@
   <name>YARFRAW - Yet Another RSS Feed Reader Appender Writer API</name>
   <version>0.92</version>
   <description>Title says all, this is just another rss feed reader and writer API library.</description>
+  
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <java.version>17</java.version>
+  </properties>
   <url>http://yarfraw.sourceforge.net/</url>
   <issueManagement>
     <system>Sourceforge</system>
@@ -55,12 +63,16 @@
   	  <build>
   	  	<plugins>
 		  	  <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-surefire-plugin</artifactId>
+		        <version>3.1.2</version>
 		        <configuration>
-		          <forkMode>always</forkMode>
+		          <forkCount>1</forkCount>
+		          <reuseForks>false</reuseForks>
 		          <includes>
-		            <list>**/*Test.java</list>
+		            <include>**/*Test.java</include>
 		          </includes>
+		          <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
         		</configuration>
       		</plugin>
     	</plugins>
@@ -126,8 +138,9 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.jvnet.jaxb2.maven2</groupId>
-        <artifactId>maven-jaxb2-plugin</artifactId>
+        <groupId>org.jvnet.jaxb</groupId>
+        <artifactId>jaxb-maven-plugin</artifactId>
+        <version>4.0.8</version>
         <executions>
           <execution>
             <id>atom10</id>
@@ -141,6 +154,12 @@
                 <schemaInclude>atom10.xsd</schemaInclude>
               </schemaIncludes>
               <generateDirectory>${project.build.directory}/generated-sources/atom10</generateDirectory>
+              <strict>false</strict>
+              <extension>true</extension>
+              <args>
+                <arg>-nv</arg>
+                <arg>-extension</arg>
+              </args>
             </configuration>
           </execution>
           <execution>
@@ -263,10 +282,18 @@
               <schemaIncludes>
                 <schemaInclude>extension/georss.xsd</schemaInclude>
               </schemaIncludes>
+              <bindingIncludes>
+                <bindingInclude>extension/xlink-bindings.xjb</bindingInclude>
+              </bindingIncludes>
               <forceRegenerate>true</forceRegenerate>
               <generateDirectory>${project.build.directory}/generated-sources/extension/georss</generateDirectory>
+              <extension>true</extension>
+              <args>
+                <arg>-nv</arg>
+                <arg>-extension</arg>
+              </args>
             </configuration>
-          </execution>  
+          </execution>
           <execution>
             <id>wfw</id>
             <goals>
@@ -350,23 +377,32 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
         <inherited>true</inherited>
         <configuration>
-          <compilerArgument>-Xlint:all,-deprecation</compilerArgument>
+          <source>17</source>
+          <target>17</target>
+          <encoding>UTF-8</encoding>
+          <compilerArgs>
+            <arg>-Xlint:all,-deprecation</arg>
+          </compilerArgs>
           <showWarnings>true</showWarnings>
-          <source>1.5</source>
-          <target>1.5</target>
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.1.2</version>
         <configuration>
-          <forkMode>always</forkMode>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
           <includes>
-            <list>**/*Test.java</list>
-            <list>**/*TestSlow.java</list>
+            <include>**/*Test.java</include>
+            <include>**/*TestSlow.java</include>
           </includes>
+          <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
 
@@ -417,43 +453,43 @@
     <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
-      <version>3.1-beta1</version>
+      <version>3.1</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.4</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>commons-collections</groupId>
-      <artifactId>commons-collections</artifactId>
-      <version>3.2</version>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.4</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.3.1</version>
+      <version>2.11.0</version>
     </dependency>
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.3</version>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
     </dependency>
     <dependency>
-      <groupId>com.sun.xml.bind</groupId>
-      <artifactId>jaxb-impl</artifactId>
-      <version>2.0.3</version>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
-      <groupId>javax.xml</groupId>
-      <artifactId>jaxb-api</artifactId>
-      <version>2.1</version>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>4.0.3</version>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.1</version>
+      <version>1.2</version>
     </dependency>
   </dependencies>
   <reporting>
@@ -464,7 +500,7 @@
 				<linkXref>true</linkXref>
 				<sourceEncoding>utf-8</sourceEncoding>
 				<minimumTokens>80</minimumTokens>
-				<targetJdk>1.5</targetJdk>
+				<targetJdk>17</targetJdk>
 				<excludes>
 					<exclude>**/yarfraw/generated/**/*.java</exclude>
 				</excludes>
@@ -512,13 +548,13 @@
           <maxmemory>512</maxmemory>
           <links>
             <list>
-              http://java.sun.com/j2se/1.5.0/docs/api
+              https://docs.oracle.com/en/java/javase/17/docs/api/
             </list>
             <list>
-              http://java.sun.com/javaee/5/docs/api/
+              https://jakarta.ee/specifications/platform/10/apidocs/
             </list>
           </links>
-          <source>1.5</source>
+          <source>17</source>
         </configuration>
       </plugin>
       <plugin>
